--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Test 1</title>
   <link rel="stylesheet" href="./style.min.css">
 </head>
 
 <body>
 
-  <h2>Test</h2>
+  <h2>Test 1</h2>
 
   <button id="clickMe">Click Me</button>
 
